@@ -1,4 +1,7 @@
 2002-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Added progress monitor support to DrawImage().
+
+2002-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Added progress monitor support to wmf.c.
 
 2002-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
